2005-09-08  Martin Hunt  <hunt@redhat.com>

	* scf/scf.c (inst_smp_call_function): Add new verbose arg
	to _stp_stack_sprint() call.

2005-08-31  Martin Hunt  <hunt@redhat.com>

	* Makefile.template: Remove KTA, KALLSYMS_LOOKUP,
	and KALLSYMS_LOOKUP_NAME

2005-08-19  Martin Hunt  <hunt@redhat.com>

	* shellsnoop/shellsnoop.c: Remove STP_NETLINK_ONLY.
	* stp: Deleted. Use stpd directly.
	

2005-08-01  Martin Hunt  <hunt@redhat.com>

	* agg/stat1.c (probe_exit): Remove "static"
	* agg/count1.c (probe_exit): Ditto.
	* agg/count2.c (probe_exit): Ditto.		
	* bench/bench_io2.c (probe_exit): Ditto.
	* bench/bench_io1.c (probe_exit): Ditto.
	* bench/bench.c (probe_exit): Ditto.
	* bench/bench_ret.c (probe_exit): Ditto.
	* bench/bench_multi.c (probe_exit): Ditto.
	* where_func/kprobe_where_funct.c (probe_exit): Ditto.
	* test4/test4.c (probe_exit): Ditto.
	* tasklet/stp_tasklet.c (probe_exit): Ditto.
	* os_timer/os_timer.c (probe_exit): Ditto.
	* scf/scf.c (probe_exit): Ditto.

2005-07-28  Martin Hunt  <hunt@redhat.com>

	* bench/ALL: Chnage to probe sys_getuid() and sys_getgid()
	because those aren't used by stpd, unlike sys_read() and sys_write().

2005-07-11  Martin Hunt  <hunt@redhat.com>

	* build_probe: Set RELAYFS correctly.

	* Makefile.template: Fix for RELAYFS.

	* stp: Moved here.  All probes now use this copy.

	* ALL/stp: source the master copy of stp.

2005-07-08  Martin Hunt  <hunt@redhat.com>

	* ALL: Use new runtime.h. Change init_module()
	to probe_start() and don't do transport calls.
	Remove MODULE_LICENSE and cleanup_module().

2005-07-01  Martin Hunt  <hunt@redhat.com>

	* Makefile.template (debug): New target.

	* build: Support "debug" target.

	* build_probe: Ditto.

2005-06-28  Martin Hunt  <hunt@redhat.com>

	* bench/bench_ret.c (inst_sys_write_ret): Fix prototype.

	* bench: New probe to do benchmarks.

2005-06-23  Martin Hunt  <hunt@redhat.com>

	* all probes: Modified to use latest changes to transport.h.
